[project]
name = "check_done"
version = "1.1.0"
description = "Check done issues on a GitHub project board"
authors = [{ name = "Siisurit e.U." }]
requires-python = ">=3.11, <4"
readme = "README.md"
license = "MIT"
keywords = [
    "check",
    "closed",
    "done",
    "done done",
    "finished",
    "issue",
    "task",
    "validate",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml~=6.0",
    "python-dotenv~=1.0",
    "pydantic~=2.10",
    "cryptography~=44.0",
    "pyjwt~=2.10",
    "requests~=2.32",
]

[project.urls]
Homepage = "https://github.com/siisurit/check_done"
Repository = "https://github.com/siisurit/check_done.git"
Documentation = "https://github.com/siisurit/check_done/blob/main/README.md"
Changelog = "https://github.com/siisurit/check_done/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/siisurit/check_done/issues"

[project.scripts]
check_done = "check_done.command:main"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = [
    "-rA"
]
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "coverage>=7,<8",
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "pre-commit>=4,<5",
    "ruff~=0.11",
    "requests-mock~=1.12",
]

[tool.hatch.build.targets.sdist]
include = ["check_done"]

[tool.hatch.build.targets.wheel]
include = ["check_done"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "htmlcov",
]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = [
    # Missing trailing comma → May cause conflicts when used with the formatter.
    "COM812",
    # Too many branches
    "PLR0912",
    # Too many arguments in function definition
    "PLR0913",
    # Too many statements
    "PLR0915",
    # Magic value used in comparison
    "PLR2004",
    "PTH100",
    "PTH103",
    "PTH107",
    "PTH109",
    "PTH110",
    "PTH112",
    "PTH114",
    "PTH118",
    "PTH119",
    "PTH120",
    "PTH122",
    "PTH123",
    "PTH202",
    "PTH207",
    # Unneccesarry assign → We regularly use `result = ...; return result` to examine the result in the debugger.
    "RET504",
    # Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF012",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Abstract `raise` to an inner function
    "TRY301",
]
select = [
    # flake8-builtins
    "A",
    # flake8-bugbear
    "B",
    # flake8-commas
    "COM",
    # flake8-comprehensions
    "C4",
    # flake8-django
    "DJ",
    # flake8-datetimez
    "DTZ",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    #  flake8-gettext
    "INT",
    # flake8-logging
    "LOG",
    # perflint
    "PERF",
    # pygrep-hooks
    "PGH",
    # flake8-pie
    "PIE",
    # pylint
    "PL",
    # flake8-use-pathlib
    "PTH",
    # refactor
    "R",
    # flake8-raise
    "RSE",
    # flake8-return
    "RET",
    # ruff specific rules
    "RUF",
    # flake8-self
    "SLF",
    # flake8-simplify
    "SIM",
    # tryceratops
    "TRY",
    # flake8-debugger
    "T10",
    # flake8-print
    "T20",
    # pyupgrade
    "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["check_done", "scripts", "tests"]
